v4 overhaul fr_FR localization

--- a/EGHV/Localization/fr_FR/Frontend_WondrousGoodyHuts_Text.xml
+++ b/EGHV/Localization/fr_FR/Frontend_WondrousGoodyHuts_Text.xml
@@ -4,89 +4,89 @@
 	Copyright (C) 2020-2021 zzragnar0kzz
 	All rights reserved
 ===========================================================================-->
-<!-- localized Wondrous Goody Huts frontend text for en_US; Wondrous Goody Huts is the property of Sailor Cat -->
+<!-- localized Wondrous Goody Huts frontend text for fr_FR; Wondrous Goody Huts is the property of Sailor Cat -->
 <GameData>
 	<LocalizedText>
 		<!-- tooltip text -->
-		<Replace Tag="LOC_WGH_TT" Language="en_US">
-			<Text>[NEWLINE]  [COLOR_Blue]Mod[ENDCOLOR]: [COLOR_Civ6Yellow]Wondrous[ENDCOLOR] Goody Huts</Text>
+		<Replace Tag="LOC_WGH_TT" Language="fr_FR">
+			<Text>[NEWLINE] [COLOR_Blue] mod [ENDCOLOR]: [COLOR_Civ6Yellow] Wondrous [ENDCOLOR] Goody Hutts</Text>
 		</Replace>
 		<!-- random resource -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_NAME" Language="en_US">
-			<Text>Find New Resource</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_NAME" Language="fr_FR">
+			<Text>Trouver une nouvelle ressource</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_DESC" Language="en_US">
-			<Text>Discover a new resource in a random plot in territory controlled by the Player.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_DESC" Language="fr_FR">
+			<Text>Découvrez une nouvelle ressource dans une parcelle aléatoire sur le territoire contrôlé par le joueur.</Text>
 		</Replace>
 		<!-- random unit -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_NAME" Language="en_US">
-			<Text>1 Unique Unit</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_NAME" Language="fr_FR">
+			<Text>1 unité unique</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_DESC" Language="en_US">
-			<Text>Receive one (1) random unique unit, possibly one which is unique to a Civilization other than the Player's.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_DESC" Language="fr_FR">
+			<Text>Recevez une (1) unité unique aléatoire, éventuellement une unité unique à une civilisation autre que celle du joueur.</Text>
 		</Replace>
 		<!-- random improvement -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_NAME" Language="en_US">
-			<Text>1 Improvement</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_NAME" Language="fr_FR">
+			<Text>1 amélioration</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_DESC" Language="en_US">
-			<Text>Receive one (1) random improvement, possibly one which is unique to a Civilization other than the Player's.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_DESC" Language="fr_FR">
+			<Text>Recevez une (1) amélioration aléatoire, éventuellement celle qui est unique à une civilisation autre que celle du joueur.</Text>
 		</Replace>
 		<!-- sight bomb -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_NAME" Language="en_US">
-			<Text>[ICON_Ability] Wilderness Training</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_NAME" Language="fr_FR">
+			<Text>[ICON_Ability] Formation sauvage</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_DESC" Language="en_US">
-			<Text>The receiving unit is granted the [ICON_Ability] Wilderness Training ability (+2 sight, can see through features).</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_DESC" Language="fr_FR">
+			<Text>L'unité de réception est accordée à la capacité de formation [ICON_Ability] désert (+2 vue, peut voir via des fonctionnalités).</Text>
 		</Replace>
 		<!-- random policy -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_NAME" Language="en_US">
-			<Text>1 [ICON_Policy] Policy</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_NAME" Language="fr_FR">
+			<Text>1 politique [ICON_Policy]</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_DESC" Language="en_US">
-			<Text>Unlock one (1) random [ICON_Policy] Policy from the current Era.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_DESC" Language="fr_FR">
+			<Text>Déverrouiller une (1) politique aléatoire [ICON_Policy] de l'époque actuelle.</Text>
 		</Replace>
 		<!-- formation -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_NAME" Language="en_US">
-			<Text>Upgrade [ICON_Corps] Formation</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_NAME" Language="fr_FR">
+			<Text>Mise à niveau [ICON_Corps] Formation</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_DESC" Language="en_US">
-			<Text>The receiving unit has its [ICON_Corps] Formation upgraded.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_DESC" Language="fr_FR">
+			<Text>L'unité de réception a sa formation [ICON_Corps] mis à niveau.</Text>
 		</Replace>
 		<!-- natural wonder -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_NAME" Language="en_US">
-			<Text>Reveal Natural Wonder</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_NAME" Language="fr_FR">
+			<Text>Révéler la merveille naturelle</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_DESC" Language="en_US">
-			<Text>Discover an unrevealed natural wonder.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_DESC" Language="fr_FR">
+			<Text>Découvrez une merveille naturelle non révérée.</Text>
 		</Replace>
 		<!-- city-state -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_NAME" Language="en_US">
-			<Text>Meet City-State</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_NAME" Language="fr_FR">
+			<Text>Rencontrer la ville-état</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_DESC" Language="en_US">
-			<Text>Discover an unmet city-state.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_DESC" Language="fr_FR">
+			<Text>Découvrez un état de ville non satisfaits.</Text>
 		</Replace>
 		<!-- spy -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_NAME" Language="en_US">
-			<Text>1 [ICON_Unit] Spy</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_NAME" Language="fr_FR">
+			<Text>1 [ICON_Unit] espion</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_DESC" Language="en_US">
-			<Text>Receive one (1) free Spy unit.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_DESC" Language="fr_FR">
+			<Text>Recevez une unité d'espion (1) libre.</Text>
 		</Replace>
 		<!-- production boost -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_NAME" Language="en_US">
-			<Text>[ICON_Production] Production Burst</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_NAME" Language="fr_FR">
+			<Text>[ICON_PRODUCTION] Écarté de production</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_DESC" Language="en_US">
-			<Text>The Player's [ICON_Capital] Capital city receives a burst of [ICON_Production] Production which completes the current item in its Production queue.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_DESC" Language="fr_FR">
+			<Text>La capitale [icon_capital] du joueur reçoit une explosion de la production [icon_Production] qui complète l'élément actuel de sa file d'attente de production.</Text>
 		</Replace>
 		<!-- teleport -->
-		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_NAME" Language="en_US">
-			<Text>World Tour</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_NAME" Language="fr_FR">
+			<Text>Tour du monde</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_DESC" Language="en_US">
-			<Text>The receiving unit embarks upon an expedition to a faraway tile. It is joined by one (1) free Settler unit.</Text>
+		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_DESC" Language="fr_FR">
+			<Text>L'unité de réception embarque sur une expédition à une tuile lointaine. Il est joint à une (1) unité de colons gratuite.</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
