--- a/EGHV/Localization/fr_FR/Ingame_XP1_Text.xml
+++ b/EGHV/Localization/fr_FR/Ingame_XP1_Text.xml
@@ -4,21 +4,21 @@
 	Copyright (C) 2020-2021 zzragnar0kzz
 	All rights reserved
 ===========================================================================-->
-<!-- localized in-game text for en_US -->
+<!-- localized in-game text for fr_FR -->
 <GameData>
 	<LocalizedText>
 		<!-- new goody hut reward descriptions : governors-type -->
-		<Replace Tag="LOC_GOODYHUT_GOVERNORS_ONE_TITLE_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]One [ICON_Government] Governor Title[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_GOVERNORS_ONE_TITLE_DESCRIPTION" Language="fr_FR">
+			<Text>[COLOR_FLOAT_DIPLOMATIC] un [ICON_Government] Titre du gouverneur [ENDCOLOR]</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_GOVERNORS_TWO_TITLES_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]Two [ICON_Government] Governor Titles[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_GOVERNORS_TWO_TITLES_DESCRIPTION" Language="fr_FR">
+			<Text>[COLOR_FLOAT_DIPLOMATIC] Deux titres [ICON_Government] Titres de gouverneur [ENDCOLOR]</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_GOVERNORS_THREE_TITLES_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]Three [ICON_Government] Governor Titles[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_GOVERNORS_THREE_TITLES_DESCRIPTION" Language="fr_FR">
+			<Text>[COLOR_FLOAT_DIPLOMATIC] Trois [ICON_Government] Titres du gouverneur [ENDCOLOR]</Text>
 		</Replace>
-		<Replace Tag="LOC_GOODYHUT_GOVERNORS_FOUR_TITLES_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]Four [ICON_Government] Governor Titles[ENDCOLOR]</Text>
+		<Replace Tag="LOC_GOODYHUT_GOVERNORS_FOUR_TITLES_DESCRIPTION" Language="fr_FR">
+			<Text>[COLOR_FLOAT_DIPLOMATIC] quatre [ICON_Government] Titres du gouverneur [ENDCOLOR]</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
