--- a/EGHV/Localization/en_US/Frontend_WondrousGoodyHuts_Text.xml
+++ b/EGHV/Localization/en_US/Frontend_WondrousGoodyHuts_Text.xml
@@ -16,28 +16,28 @@
 			<Text>Find New Resource</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_DESC" Language="en_US">
-			<Text>Discover a new resource in a random plot in territory controlled by the Player.</Text>
+			<Text>Discover a new resource in a random plot in territory you control.</Text>
 		</Replace>
 		<!-- random unit -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_NAME" Language="en_US">
-			<Text>1 Unique Unit</Text>
+			<Text>Random Unit</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_DESC" Language="en_US">
-			<Text>Receive one (1) random unique unit, possibly one which is unique to a Civilization other than the Player's.</Text>
+			<Text>Receive one (1) random unit, possibly one which is unique to another Civilization.</Text>
 		</Replace>
 		<!-- random improvement -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_NAME" Language="en_US">
-			<Text>1 Improvement</Text>
+			<Text>Random Improvement</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_DESC" Language="en_US">
-			<Text>Receive one (1) random improvement, possibly one which is unique to a Civilization other than the Player's.</Text>
+			<Text>Receive one (1) random improvement, possibly one which is unique to another Civilization.</Text>
 		</Replace>
 		<!-- sight bomb -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_NAME" Language="en_US">
 			<Text>[ICON_Ability] Wilderness Training</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_DESC" Language="en_US">
-			<Text>The receiving unit is granted the [ICON_Ability] Wilderness Training ability (+2 sight, can see through features).</Text>
+			<Text>The receiving unit is granted the [ICON_Ability] Wilderness Training ability (+2 Sight, can see through features).</Text>
 		</Replace>
 		<!-- random policy -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_NAME" Language="en_US">
@@ -48,10 +48,10 @@
 		</Replace>
 		<!-- formation -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_NAME" Language="en_US">
-			<Text>Upgrade [ICON_Corps] Formation</Text>
+			<Text>[ICON_Corps]/[ICON_Army] Formation</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_DESC" Language="en_US">
-			<Text>The receiving unit has its [ICON_Corps] Formation upgraded.</Text>
+			<Text>The receiving unit has its [ICON_Corps]/[ICON_Army] Formation upgraded, if applicable.</Text>
 		</Replace>
 		<!-- natural wonder -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_NAME" Language="en_US">
@@ -72,21 +72,21 @@
 			<Text>1 [ICON_Unit] Spy</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_DESC" Language="en_US">
-			<Text>Receive one (1) free Spy unit.</Text>
+			<Text>Receive one (1) free [ICON_Unit] Spy in a random City.</Text>
 		</Replace>
 		<!-- production boost -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_NAME" Language="en_US">
 			<Text>[ICON_Production] Production Burst</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_DESC" Language="en_US">
-			<Text>The Player's [ICON_Capital] Capital city receives a burst of [ICON_Production] Production which completes the current item in its Production queue.</Text>
+			<Text>Receive a burst of [ICON_Production] Production in a random City, which completes the current item in its Production queue.</Text>
 		</Replace>
 		<!-- teleport -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_NAME" Language="en_US">
-			<Text>World Tour</Text>
+			<Text>Teleport</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_DESC" Language="en_US">
-			<Text>The receiving unit embarks upon an expedition to a faraway tile. It is joined by one (1) free Settler unit.</Text>
+			<Text>The receiving unit is instantly teleported to a far away tile. It is joined in this world tour by one (1) free [ICON_Unit] Settler.</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
