--- a/EGHV/Localization/en_US/Ingame_XP2_Text.xml
+++ b/EGHV/Localization/en_US/Ingame_XP2_Text.xml
@@ -16,16 +16,16 @@
 		</Replace>
 		<!-- new goody hut reward descriptions : diplomacy-type -->
 		<Replace Tag="LOC_GOODYHUT_SMALL_FAVOR_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+10 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+10 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_MEDIUM_FAVOR_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+20 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+20 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_LARGE_FAVOR_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+30 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+30 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_HUGE_FAVOR_DESCRIPTION" Language="en_US">
-			<Text>[COLOR_FLOAT_DIPLOMATIC]+50 [ICON_FAVOR] Diplomatic Favor[ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+50 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<!-- new goody hut reward descriptions : resources-type -->
 		<Replace Tag="LOC_GOODYHUT_SMALL_RESOURCES_DESCRIPTION" Language="en_US">
@@ -40,5 +40,9 @@
 		<Replace Tag="LOC_GOODYHUT_HUGE_RESOURCES_DESCRIPTION" Language="en_US">
 			<Text>[COLOR_FLOAT_MILITARY]+50 strategic resources[ENDCOLOR]</Text>
 		</Replace>
+		<!-- new goody hut reward descriptions : secrets-type -->
+		<Replace Tag="LOC_GOODYHUT_VILLAGER_SECRETS_FAVOR_DESCRIPTION" Language="en_US">
+            <Text>[COLOR_FLOAT_DIPLOMATIC][ICON_Buildings] Diplomacy Totem unlocked or built[ENDCOLOR]</Text>
+        </Replace>
 	</LocalizedText>
 </GameData>
